<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/dark_gray"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/movie_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:background="@drawable/avengers_background"
            android:src="@drawable/avengers_mask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/back_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:textColor="@color/gray"
            app:drawableStartCompat="@drawable/ic_path"
            android:drawablePadding="12dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/avengers_end_game_title"
            android:textColor="@color/light_gray"
            android:textSize="40sp"
            android:fontFamily="sans-serif-black"
            app:layout_constraintTop_toBottomOf="@id/movie_background"
            app:layout_constraintBottom_toBottomOf="@+id/movie_background"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/avengers_end_game_rate"
            android:textColor="@color/light_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/avengers_end_game_tags"
            android:textColor="@color/pink"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/title" />


        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:text="@string/storyline"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/review_layout" />

        <LinearLayout
            android:id="@+id/review_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tagline"
            >

            <ImageView
                android:id="@+id/star_icon1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fullsize_review_bar_margins"
                android:src="@drawable/ic_star"
                />

            <ImageView
                android:id="@+id/star_icon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fullsize_review_bar_margins"
                android:src="@drawable/ic_star"
                />

            <ImageView
                android:id="@+id/star_icon3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fullsize_review_bar_margins"
                android:src="@drawable/ic_star"
                />

            <ImageView
                android:id="@+id/star_icon4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fullsize_review_bar_margins"
                android:src="@drawable/ic_star"
                />

            <ImageView
                android:id="@+id/star_icon5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fullsize_review_bar_margins"
                android:src="@drawable/ic_star"
                app:tint="@color/gray"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/avengers_end_game_review_count"
                android:textColor="@color/gray"
                android:textSize="14sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/avengers_end_game_storyline"
            android:textColor="@color/white_transparent_AA"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/storyline_title" />

        <TextView
            android:id="@+id/cast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/cast"
            android:textColor="@color/light_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actors_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintTop_toBottomOf="@id/cast_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            tools:listitem="@layout/vh_actor"
            tools:itemCount="4"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>