<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/card_view_background"
    android:layout_margin="6dp"
    android:padding="2dp"
    >

    <ImageView
        android:id="@+id/movie_preview_image"
        android:foreground="@drawable/avengers_mask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/avengers_end_game_tile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/pg_rate"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="@id/movie_preview_image"
        app:layout_constraintStart_toStartOf="@id/movie_preview_image"
        android:src="@drawable/ic_pg_13"
        android:layout_margin="8dp"
        />

    <ImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/movie_preview_image"
        app:layout_constraintEnd_toEndOf="@id/movie_preview_image"
        android:src="@drawable/ic_like"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        />

    <LinearLayout
        android:id="@+id/review_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/movie_preview_image"
        app:layout_constraintStart_toStartOf="@id/movie_preview_image"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
            >

    <ImageView
        android:layout_width="@dimen/small_review_bar_star"
        android:layout_height="@dimen/small_review_bar_star"
        android:layout_marginEnd="@dimen/small_review_bar_margins"
        android:src="@drawable/ic_star"
        />

    <ImageView
        android:layout_width="@dimen/small_review_bar_star"
        android:layout_height="@dimen/small_review_bar_star"
        android:layout_marginEnd="@dimen/small_review_bar_margins"
        android:src="@drawable/ic_star"
            />

    <ImageView
        android:layout_width="@dimen/small_review_bar_star"
        android:layout_height="@dimen/small_review_bar_star"
        android:layout_marginEnd="@dimen/small_review_bar_margins"
        android:src="@drawable/ic_star"
        />

    <ImageView
        android:layout_width="@dimen/small_review_bar_star"
        android:layout_height="@dimen/small_review_bar_star"
        android:layout_marginEnd="@dimen/small_review_bar_margins"
        android:src="@drawable/ic_star"
        />

    <ImageView
        android:layout_width="@dimen/small_review_bar_star"
        android:layout_height="@dimen/small_review_bar_star"
        android:layout_marginEnd="@dimen/small_review_bar_margins"
        android:src="@drawable/ic_star"
        app:tint="@color/gray"
        />

    <TextView
        android:id="@+id/review_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/avengers_end_game_review_count"
        android:textColor="@color/gray"
        android:textSize="8sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avengers_end_game_tags"
        android:textColor="@color/pink"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@id/review_bar"
        app:layout_constraintStart_toStartOf="@id/review_bar"
            />

    <TextView
        android:id="@+id/movie_preview_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/avengers_end_game_title"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/movie_preview_image"
        app:layout_constraintStart_toStartOf="@id/movie_preview_image"
        app:layout_constraintEnd_toEndOf="@id/movie_preview_image"
        android:textColor="@color/light_gray"
        android:textSize="14sp"
        android:fontFamily="sans-serif-black"
            />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:layout_constraintTop_toBottomOf="@id/movie_preview_title"
        app:layout_constraintStart_toStartOf="@id/movie_preview_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/avengers_end_game_duration"
        android:textColor="@color/gray"
        android:fontFamily="sans-serif-black"
        android:textSize="8sp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>